# nexus

./: .editorconfig  .gitignore  ARCHITECTURE.md  ARCHITECTURE_ADVANCED.md  AWESOME_LIST_SUBMISSION_STRATEGY.md  BENCHMARKS.md  CHANGELOG.md  CICD_FIXES_SUMMARY.md  CICD_PIPELINE_FIX_REPORT.md  CI_CD_COMPLETE_RESOLUTION.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  COMMERCIAL_ROADMAP.md  COMPARISON.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE_FINAL.md  DOCUMENTATION.md  EXECUTIVE_SUMMARY.md  FAQ.md  GDPR_COMPLIANCE.md  GITHUB_DISCUSSIONS_SETUP.md  GITHUB_PUBLICATION_READY.md  GITHUB_TOPICS_SETUP.md  HIPAA_COMPLIANCE.md  INSTALLATION.md  LICENSE-CRYPTO  LICENSE-RELAY  MAINTAINERS.md  NEXUS_8HOUR_VIRAL_BLITZ.md  NEXUS_8H_IMMEDIATE_ACTIONS.md  NEXUS_DOCUMENTATION_INDEX.md  NEXUS_LAUNCH_CHECKLIST.md  NEXUS_MEGA_IMPROVEMENTS.md  NEXUS_RELAY_CRYPTOGRAPHY_PHASE.md  NEXUS_V0.2.0_FINAL_REPORT.md  NEXUS_v0.3.0_MEGA_VISION.md  (+27 more)
.archive/: DELIVERABLES_CHECKLIST.md  DETAILED_CODE_PERFECTION_PLAN.md  FILES_CREATED.txt  FILES_CREATED_SESSION_6.txt  FILES_CREATED_SESSION_7.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INDEX_FILES_SESSION_7.md  NEXUS_RELAY_CRYPTO_IMPLEMENTATION.md  NEXUS_V0.2.0_SESSION_SUMMARY.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  README_SESSION_6.txt  README_SESSION_7.md  SESSION5_EXPANSION.md  SESSION_6_DELIVERABLES.txt  SESSION_6_IMPLEMENTATION_REPORT.md  SESSION_7_COMPLETION.md  START_HERE.txt
.claude/: settings.local.json
.github/: RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: master-ci.yml  rust-ci.yml
.github/workflows/disabled/: ci-relay.yml  docs.yml  nexus-ci.yml  security-audit.yml  security-ci.yml
docs/: crypto-spec.md
migrations/: 001_initial_schema.sql
monitoring/: prometheus.yml  rules.yml  threat_alerts.yml
nexus-android/: settings.gradle
nexus-android/app/: build.gradle
nexus-android/app/src/main/: AndroidManifest.xml
nexus-crypto/: Cargo.toml
nexus-crypto/src/: error.rs  hybrid_kem.rs  identity.rs  lib.rs  pq.rs  ratchet.rs  secure_mem.rs  security_tests.rs  x3dh.rs
nexus-desktop/src-tauri/: Cargo.toml
nexus-desktop/src-tauri/src/: crypto.rs  main.rs  relay.rs  storage.rs
nexus-desktop/src-tauri/ui/: app.js  index.html  styles.css
nexus-ios/: Package.swift
nexus-ios/Sources/NexusMessenger/: AppState.swift  NexusApp.swift
nexus-ios/Sources/NexusMessenger/Crypto/: NexusCrypto.swift  SecureEnclaveManager.swift
nexus-ios/Sources/NexusMessenger/Data/: MessageStore.swift
nexus-ios/Sources/NexusMessenger/Network/: RelayClient.swift
nexus-ios/Sources/NexusMessenger/Security/: IntegrityChecker.swift
nexus-ios/Sources/NexusMessenger/Services/: NotificationManager.swift
nexus-ios/Sources/NexusMessenger/Views/: CallView.swift  ChatView.swift  GroupsView.swift  SettingsView.swift
nexus-ios/Tests/: NexusCryptoTests.swift  SecureEnclaveManagerTests.swift
nexus-relay/: .env.example  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  Makefile  docker-compose.yml  docker-entrypoint.sh
nexus-relay/.cargo/: mutants.toml
nexus-relay/docs/: THREAT_MODEL.md  architecture.md  openapi.yaml
nexus-relay/formal/: DoubleRatchet.tla  X3DH.tla  model.cfg
nexus-relay/fuzz/: Cargo.toml
nexus-relay/fuzz/fuzz_targets/: fuzz_crypto.rs  fuzz_groups.rs  fuzz_handler.rs  fuzz_message_parsing.rs  fuzz_presence.rs  fuzz_rate_limiting.rs
nexus-relay/k8s/: deployment.yaml  rbac.yaml  service.yaml
nexus-relay/loadtest/: k6-load-test.js
nexus-relay/monitoring/: prometheus.yml  rules.yml
nexus-relay/monitoring/alerts/: nexus.yml
nexus-relay/monitoring/grafana/datasources/: prometheus.yaml
nexus-relay/nginx/: nginx.conf
nexus-relay/src/: access_control.rs  accounts.rs  api.rs  audit.rs  backup.rs  call_encryption.rs  challenge_verification.rs  differential_privacy.rs  drafts.rs  encryption_manager.rs  envelope_encryption.rs  error.rs  federation.rs  groups.rs  handler.rs  lib.rs  main.rs  media_storage.rs  message_search.rs  metadata_privacy.rs  metrics.rs  ml_threat_detection.rs  multicast_groups.rs  notifications.rs  persistence.rs  plugins.rs  presence.rs  push_notifications.rs  rate_limiting.rs  reactions.rs  replay_protection.rs  scheduling.rs  sealed_sender.rs  secure_deletion.rs  state.rs  sync.rs  temporal_messages.rs  threat_detection.rs  threat_metrics.rs  tls.rs  (+2 more)
nexus-relay/tests/: integration.rs
nexus-web/: Dockerfile  index.html  package.json  vite.config.ts
nexus-web/public/: sw.js
nexus-web/src/: App.css  App.tsx  SealedSender.ts  crypto.ts  storage.ts  sync.ts
nexus-web/src/components/: AdminDashboard.tsx  Groups.tsx  MediaUpload.tsx  Navigation.tsx
nexus-web/src/pages/: ChatView.tsx  Contacts.tsx  Login.tsx  Settings.tsx
nexus-web/src/state/: NexusContext.tsx
(+21 files in other folders)
