[workspace]
members = [
    "nexus-relay",
    "nexus-crypto",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# This file serves as the workspace root for NEXUS.
# Individual crates have their own Cargo.toml files.
#
# To build everything:
#   cargo build --release
#
# To test everything:
#   cargo test --all
#
# To check for warnings:
#   cargo clippy --all-targets -- -D warnings
