[package]
name = "nexus-crypto"
version = "0.3.0"
edition = "2021"
authors = ["said885 <frensh5@proton.me>"]
description = "Post-quantum cryptographic primitives library. Kyber1024 (FIPS 203) + Dilithium5 (FIPS 204) + X3DH key agreement + Double Ratchet."
homepage = "https://github.com/said885/nexus"
repository = "https://github.com/said885/nexus"
license = "Apache-2.0"
keywords = ["crypto", "kyber", "dilithium", "post-quantum", "ffi"]
categories = ["cryptography"]

[lib]
name = "nexus_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha3 = "0.10"
hmac = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
blake3 = "1"
subtle = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
