[package]
name = "nexus-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
blake3 = "1"
dashmap = "5"
rand = "0.8"
thiserror = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sha3 = "0.10"
hmac = "0.12"
base64 = "0.21"
rustls = "0.23"
rustls-pemfile = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
chacha20poly1305 = "0.10"
getrandom = "0.2"
md5 = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
hkdf = "0.12"
parking_lot = "0.12"
lru = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
