[package]
name = "nexus-desktop"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
blake3 = "1"
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chacha20poly1305 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
