[package]
name = "nexus-relay-fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
base64 = "0.21"
hex = "0.4"

[workspace]
members = ["."]

[[bin]]
name = "fuzz_message_parsing"
path = "fuzz_targets/fuzz_message_parsing.rs"

[[bin]]
name = "fuzz_handler"
path = "fuzz_targets/fuzz_handler.rs"

[[bin]]
name = "fuzz_crypto"
path = "fuzz_targets/fuzz_crypto.rs"

[[bin]]
name = "fuzz_rate_limiting"
path = "fuzz_targets/fuzz_rate_limiting.rs"

[[bin]]
name = "fuzz_groups"
path = "fuzz_targets/fuzz_groups.rs"

[[bin]]
name = "fuzz_presence"
path = "fuzz_targets/fuzz_presence.rs"
